# docs/swagger.json
@@ -1577,7 +1577,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.OrderResponse"
+                            "$ref": "#/definitions/dto.CheckoutResponse"
                         }
                     },
                     "400": {
@@ -2153,8 +2153,22 @@
                 "shipping_address"
             ],
             "properties": {
+                "idempotency_key": {
+                    "type": "string"
+                },
                 "shipping_address": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.CheckoutResponse": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "$ref": "#/definitions/dto.OrderCheckoutResponse"
+                },
+                "payment": {
+                    "$ref": "#/definitions/dto.PaymentResponse"
                 }
             }
         },
@@ -2176,13 +2190,13 @@
         "dto.MerchantDashboardResponse": {
             "type": "object",
             "properties": {
+                "awaiting_shipment": {
+                    "type": "integer"
+                },
                 "completed_orders": {
                     "type": "integer"
                 },
                 "low_stock_products": {
-                    "type": "integer"
-                },
-                "pending_orders": {
                     "type": "integer"
                 },
                 "recent_orders": {
@@ -2320,6 +2334,46 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.OrderCheckoutResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.OrderItemResponse"
+                    }
+                },
+                "shipping_address": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "number"
+                }
+            }
+        },
+        "dto.OrderItemResponse": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "number"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
                 }
             }
         },
